Make changes suggested by static analyzer tool